unpackaged/main/default/objects/Activity/fields/Assigned_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Is_Active__c</fullName>
    <description>Indicates whether or not the user assigned to the activity is active</description>
    <formula>if(Owner:User.IsActive=true, true, false)</formula>
    <label>Assigned Is Active</label>
    <type>Checkbox</type>
</CustomField>