unpackaged/main/default/objects/Activity/fields/Five9ANI__c.field-meta.xml
<CustomField>
    <fullName>Five9ANI__c</fullName>
    <description>ANI stands for Automatic Number Identification. This is the originating phone number of the call.</description>
    <inlineHelpText>The originating phone number of the call</inlineHelpText>
    <label>Five9 ANI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>