unpackaged/main/default/objects/Activity/fields/Five9DNIS__c.field-meta.xml
<CustomField>
    <fullName>Five9DNIS__c</fullName>
    <description>DNIS stands for Dialed Number Identification Service. This is the phone number that was dialed</description>
    <inlineHelpText>The phone number that was dialed</inlineHelpText>
    <label>Five9 DNIS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>