unpackaged/main/default/objects/Activity/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial/intro</fullName>
            </value>
            <value>
                <fullName>Follow up second outreach</fullName>
            </value>
            <value>
                <fullName>Check in</fullName>
            </value>
            <value>
                <fullName>College Counseling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>